--- a/sosialisasi_sbr011.html
+++ b/sosialisasi_sbr011.html
@@ -338,7 +338,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Analisis</a>
+      <a class="navbar-brand" href="index.html">MyThought</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -346,7 +346,7 @@ div.tocify {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="sosialisasi_sbr011_html.html">Tinjauan atas Pelaksanaan Pemasaran SBR011 melalui Key Opinion Leader</a>
+  <a href="sosialisasi_sbr011_html.html">Analisis</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
