--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="sosialisasi_sbr011_html.html">Analisis</a>
+  <a href="sosialisasi_sbr011.html">Analisis</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
