--- a/sosialisasi_sbr011.html
+++ b/sosialisasi_sbr011.html
@@ -17,7 +17,7 @@
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/simplex.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -346,7 +346,7 @@ div.tocify {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="sosialisasi_sbr011_html.html">Analisis</a>
+  <a href="sosialisasi_sbr011.html">Analisis</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
