--- a/sosialisasi_sbr011.html
+++ b/sosialisasi_sbr011.html
@@ -17,7 +17,7 @@
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -904,6 +904,7 @@ Figure 6: Sentimen Analisis dari Komentar Audiens KOL SBR011 yang Menggunakan In
 Pertama, antusiasme yang tinggi dari audiens KOL muda Chornella T.P. memberikan indikasi awal bahwa kemungkinan terdapat ceruk target segment yang dapat disasar oleh Pemerintah untuk kampanye penjualan SBR011. Mengingat bahwa KOL ini mengidentifikasi dirinya sebagai pekerja buruh sekaligus investor. Dengan asumsi bahwa audiensnya merupakan masyarakat dengan karakteristik serupa, Pemerintah dapat mempertimbangkan untuk menjangkau potensial investor muda dari kalangan <em>blue collar</em>.<br />
 Kedua, melihat tingkat antusiasme audiens KOL yang mengunggah konten marketing dalam bentuk video (Vina, Chornella, Fayza dan Felicia) cenderung lebih baik ketimbang KOL yang menggunggah foto, pembuatan konten yang diunggah oleh KOL dapat diarahkan dalam format video alih-alih konten foto agar dapat menghasilkan engagement yang tinggi.</p>
 <p>Tinjauan dalam paper ini memiliki keterbatasan yaitu hanya melihat keefektivitasan KOL dalam memasarkan penjualan SBR011 melalui indikator tidak langsung (<em>proxy</em>) meliputi tingkat <em>engagement</em>, antusiasmme dan sentimen audiens. Untuk melihat dampak keuangan (<em>return on investment</em>) dari penggunaan KOL terhadap penjualan SBR011, pemerintah maupun Mitra Distribusi kiranya perlu mempertimbangkan untuk menyediakan kode referensi/<em>referral</em> yang dapat diinput oleh calon investor pada saat pemesanan, sehingga dapat diperoleh informasi mengenai sumber KOL yang menggerakkan pemesanan tersebut.</p>
+<script src="https://hypothes.is/embed.js" async></script>
 </div>
 </div>
 <div id="referensi" class="section level2 unnumbered">
