--- a/sosialisasi_sbr011.html
+++ b/sosialisasi_sbr011.html
@@ -12,12 +12,12 @@
 <meta name="author" content="Dea Avega Editya" />
 
 
-<title>Tinjauan atas Pelaksanaan Pemasaran SBR011 melalui Key Opinion Leader (KOL)</title>
+<title>Tinjauan atas Pemasaran SBR011 melalui Key Opinion Leader (KOL)</title>
 
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -360,7 +360,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Tinjauan atas Pelaksanaan Pemasaran SBR011 melalui Key Opinion Leader (KOL)</h1>
+<h1 class="title toc-ignore">Tinjauan atas Pemasaran SBR011 melalui Key Opinion Leader (KOL)</h1>
 <h3 class="subtitle">dengan pendekatan data analytics</h3>
 <h4 class="author">Dea Avega Editya</h4>
 <h4 class="date">6/17/2022</h4>
